--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "profolio",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://summerliu.github.io/",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.26",
         "@fortawesome/free-brands-svg-icons": "^5.12.0",
