--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://summerliu.github.io/portfolio",
+    "homepage": "https://summerliu.github.io/portfolio/",
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
@@ -11,6 +11,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "gh-pages": "^2.2.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router-dom": "^5.1.2",
@@ -39,8 +40,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "gh-pages": "^2.2.0"
     }
 }
