Add CNAME file and change package config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://summerliu.github.io/portfolio/",
+    "homepage": "http://summerliu.co/portfolio",
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
